@@ -7,6 +7,8 @@ webkit2gtk (2.14.1-1) UNRELEASED; urgency=medium
     + Set -DENABLE_MINIBROWSER=ON.
   * debian/libjavascriptcoregtk-4.0-bin.install:
     + Install the jsc executable in /usr/bin.
+  * debian/patches/fix-ftbfs-armel.patch:
+    + Add output message telling whether we need to build Atomics.cpp.
 
  -- Alberto Garcia <berto@igalia.com>  Wed, 12 Oct 2016 01:31:33 +0300
 
